--- a/assets/src/scss/base/_mixins.scss
+++ b/assets/src/scss/base/_mixins.scss
@@ -41,6 +41,13 @@
 }
 
 // Mobile, small and medium width (less than 992px)
+@mixin small-and-less {
+  @media (max-width: #{$medium-width - 1}) {
+    @content;
+  }
+}
+
+// Mobile, small and medium width (less than 992px)
 @mixin medium-and-less {
   @media (max-width: #{$large-width - 1}) {
     @content;
