--- a/assets/src/scss/layout/_cookies.scss
+++ b/assets/src/scss/layout/_cookies.scss
@@ -1,80 +1,81 @@
+@mixin slide-from($direction, $margin) {
+  $animation-name: unique-id() !global;
+
+  @keyframes #{$animation-name} {
+    0% {
+      #{$direction}: -100%;
+    }
+
+    100% {
+      #{$direction}: $margin;
+    }
+  }
+
+  &.shown {
+    animation: 1s $animation-name;
+  }
+}
+
 .cookie-notice {
   z-index: 100;
-  display: flex;
   position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background: $cookie-bkg url("../../images/cookie-right-gradient-sm.png") no-repeat right;
-  min-height: 80px;
-  flex-direction: column;
-  padding: 36px;
-  background-size: cover;
+  width: 100vw;
+  background: white;
+  padding: 24px 24px 32px;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0.5s, opacity 0.5s linear;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
+  bottom: 0;
+  @include slide-from(bottom, 0);
 
   &.shown {
     opacity: 1;
     visibility: visible;
   }
 
-  @include medium-and-up {
-    flex-direction: row;
-    padding: 24px 36px;
-    background-size: auto;
-  }
-
   > div {
-    font-size: $font-size-xxs;
-    margin-bottom: 10px;
-    font-weight: 500;
-    color: $dark-blue;
-    text-align: left;
+    font-size: 14px;
+    margin-bottom: 24px;
+    font-weight: 400;
+    color: $grey-80;
     font-family: $roboto;
     line-height: 1.5rem;
     width: 100%;
-    padding-right: $space-md;
-    display: block;
-
-    html[dir="rtl"] & {
-      padding-right: 0;
-      padding-left: $space-md;
-      text-align: right;
-    }
-
-    @include medium-and-up {
-      font-size: $font-size-xs;
-      margin-bottom: 0;
-      vertical-align: middle;
-    }
-    @include large-and-up {
-      font-size: $font-size-xxs;
-    }
-    @include x-large-and-up {
-      font-size: $font-size-xxs;
-    }
-  }
-
-  a {
-    color: $dark-blue;
-    text-decoration: underline;
-
-    &:hover {
-      text-decoration: none;
-    }
   }
 
   .btn {
-    height: 32px;
-    line-height: 32px;
-    font-size: $font-size-xs;
     width: 100%;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-    margin-bottom: 0;
+    line-height: 2.4;
+  }
 
-    @include medium-and-up {
-      width: 150px;
+  @include medium-and-up {
+    width: 344px;
+    bottom: 16px;
+    right: 16px;
+    left: auto;
+    border-radius: 4px;
+    padding: 24px 32px 32px;
+    box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
+    @include slide-from(right, 16px);
+
+    html[dir="rtl"] & {
+      right: auto;
+      left: 16px;
+      @include slide-from(left, 16px);
+    }
+  }
+
+  @include large-and-up {
+    bottom: 24px;
+    right: 24px;
+    @include slide-from(right, 24px);
+
+    html[dir="rtl"] & {
+      left: 24px;
+      @include slide-from(left, 24px);
     }
   }
 }
