PLANET-5934 Define 8px spacers
Ref: https://jira.greenpeace.org/browse/PLANET-5934

---

This approach removes all `$nxx` units (which are based on 5px
intervals anyway) and replaces `$space-breakpoint` variables
with a new naming scheme (check `_variables` file in this diff).

The new naming scheme uses a default `8px` spacer as
the base unit and then we create variations of that.

To make the variables easier to parse when reading the code,
it uses this pattern:
- `$sp-n`: means `n * 8px`
- `$sp-nx`: means `n.5 * 8px`

So for instance:
- `$sp-4` is `32px`
- `$sp-5x` is `44px`

---

Existing spacing values are replaced. Most of them could be
replaced with the exact same number. Those few that are not
already based on `8px` were by most `2px` off from their
nearest variable, which seems acceptable.

On old navbar and country selector just replaced with
numerical values since these are going to be deprecated soon.

--- a/assets/src/scss/base/_mixins.scss
+++ b/assets/src/scss/base/_mixins.scss
@@ -55,10 +55,10 @@
 }
 
 // Margins and padding. Use to consistently apply gutters
-// use like this: @include padding($left: $n15, $right: $n15); wich will be compiled as padding-left: 15px; padding-right: 15px;
+// use like this: @include padding($left: $sp-2, $right: $sp-2); wich will be compiled as padding-left: 16px; padding-right: 16px;
 
 // To use as negative numbers interpolate these as follows...
-// @include margin($top: -#{$n10}, $right: $n20, $bottom: $n10, $left: 0); which will be compiled as margin: -10, 20px 10px 0px;
+// @include margin($top: -#{$sp-1}, $right: $sp-2x, $bottom: $sp-1, $left: 0); which will be compiled as margin: -8, 20px 8px 0px;
 
 @mixin padding($top: null, $right: null, $bottom: null, $left: null) {
   padding-top: $top;
