--- a/assets/src/scss/components/_tweet-block.scss
+++ b/assets/src/scss/components/_tweet-block.scss
@@ -1,5 +1,5 @@
 blockquote.twitter-tweet {
-  margin: $n60 0;
+  margin: $sp-7x 0;
   padding-left: 30px;
   border-left: 4px solid $grey-20;
   display: inline-block;
