--- a/assets/src/scss/layout/_breadcrumbs.scss
+++ b/assets/src/scss/layout/_breadcrumbs.scss
@@ -1,6 +1,6 @@
 .top-page-tags {
   font-size: 16px;
-  margin-bottom: $space-xs;
+  margin-bottom: $sp-1;
   font-family: $roboto;
 
   .tag-wrap {
