--- a/assets/src/scss/pages/search/_filter-modal.scss
+++ b/assets/src/scss/pages/search/_filter-modal.scss
@@ -4,10 +4,10 @@
   }
 
   .modal-body {
-    padding: $n30 15px;
+    padding: $sp-4 15px;
 
     @include small-and-up {
-      padding: $n50;
+      padding: $sp-6x;
     }
   }
 
