--- a/assets/src/scss/pages/search/_search.scss
+++ b/assets/src/scss/pages/search/_search.scss
@@ -1,7 +1,7 @@
 .search {
   .multiple-search-result .more-btn {
     width: auto;
-    margin-bottom: $space-xxl;
+    margin-bottom: $sp-8;
   }
 }
 
