--- a/assets/src/scss/components/_buttons.scss
+++ b/assets/src/scss/components/_buttons.scss
@@ -225,7 +225,7 @@ $donate-button-box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
   background-color: transparent;
   border-color: $dark-blue;
   color: $dark-blue;
-  padding: 0 $n50 0 $n30;
+  padding: 0 $sp-6x 0 $sp-4;
   position: relative;
   font-weight: 400;
 
