--- a/assets/src/scss/layout/_country-selector.scss
+++ b/assets/src/scss/layout/_country-selector.scss
@@ -99,10 +99,10 @@
 }
 
 .countries-list .container {
-  padding: 24px 24px $space-lg 16px;
+  padding: 24px 24px $sp-4 16px;
 
   @include medium-and-up {
-    padding: 24px 0 $space-lg;
+    padding: 24px 0 $sp-4;
   }
 }
 
@@ -110,7 +110,7 @@
   column-count: 1;
   list-style: none;
   margin: 0;
-  padding-inline-start: $space-lg;
+  padding-inline-start: $sp-4;
 
   @include medium-and-up {
     column-count: 3;
@@ -122,17 +122,17 @@
 
   .international {
     margin: 0;
-    padding: 0 0 $space-lg 0;
+    padding: 0 0 $sp-4 0;
   }
 
   .lang-list {
     font-weight: 400;
     line-height: 24px;
     list-style: none;
-    padding: $space-xxs 0 0 0;
+    padding: $sp-x 0 0 0;
 
     @include medium-and-up {
-      margin-inline-end: $space-lg;
+      margin-inline-end: $sp-4;
     }
   }
 
@@ -149,7 +149,7 @@
     font-size: $font-size-xxxs;
     font-weight: 700;
     line-height: 20px;
-    margin-inline-start: -#{$space-lg};
+    margin-inline-start: -#{$sp-4};
     opacity: 0.5;
     position: absolute;
 
