Allow multiple boxouts, remove id attribute
Ref: https://jira.greenpeace.org/browse/PLANET-6501
* Block now is inline so multiple should work.

--- a/templates/blocks/take-action-boxout.twig
+++ b/templates/blocks/take-action-boxout.twig
@@ -1,6 +1,6 @@
 {% block take_action_boxout %}
 	{% if ( boxout ) %}
-		<section id="action-card" class="boxout">
+		<section class="boxout">
 			<a
 				data-ga-category="Take Action Boxout"
 				data-ga-action="Image"
