PLANET-6432 Add reading time on posts
Ref: https://jira.greenpeace.org/browse/PLANET-6432

- WPM settings in Planet 4 > Default content
- Opt-in from Posts > Posts types

--- a/templates/single.twig
+++ b/templates/single.twig
@@ -76,6 +76,13 @@
 							</address>
 						{% endif %}
 						<time class="single-post-time" pubdate>{{ post.post_date|date }}</time>
+						{% set reading_time = post.reading_time %}
+						{% if reading_time %}
+							<span class="single-post-meta-bullet" aria-hidden="true">&#8226;</span>
+							<span class="single-post-meta-readtime">
+								{{ __( '%d min read', 'planet4-master-theme' )|format(reading_time) }}
+							</span>
+						{% endif %}
 						{% if ( show_comments ) %}
 							<span class="single-post-meta-bullet" aria-hidden="true">&#8226;</span>
 							<a href="#comments" class="comment-link">
