PLANET-6432 Add reading time on Posts
Ref: https://jira.greenpeace.org/browse/PLANET-6432

---

Use a fallback default of 265 wpm, based on
[medium](https://help.medium.com/hc/en-us/articles/214991667-Read-time).

--- a/templates/single.twig
+++ b/templates/single.twig
@@ -76,6 +76,12 @@
 							</address>
 						{% endif %}
 						<time class="single-post-time" pubdate>{{ post.post_date|date }}</time>
+						{% if post.reading_time %}
+							<span class="single-post-meta-bullet" aria-hidden="true">&#8226;</span>
+							<span class="single-post-meta-readtime">
+								{{ post.reading_time }} {{ __( 'min read', 'planet4-master-theme' ) }}
+							</span>
+						{% endif %}
 						{% if ( show_comments ) %}
 							<span class="single-post-meta-bullet" aria-hidden="true">&#8226;</span>
 							<a href="#comments" class="comment-link">
